--- a/Exercises/Exercise 4 - RWD/Ex4.html
+++ b/Exercises/Exercise 4 - RWD/Ex4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <meta name="viweport" content="width=width-device, initial-scale=1.0">
+        <meta name="viweport" content="width=device-width, initial-scale=1.0">
         <link href="ex4.css" rel="stylesheet">
         <title>
             My Homepage
